--- a/index.html
+++ b/index.html
@@ -36,10 +36,28 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-  </head>
+
+    <!-- js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+      crossorigin="anonymous"
+    ></script>
+  </head> 
+
+
+
+
+
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="navbarwrap fixed-top MeanyNavTrs py-4">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bgcolor">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="#">Recipes 조리법</a>
         <button
@@ -81,7 +99,7 @@
         </div>
       </div>
     </nav>
-
+  </div>
     <!-- hero start -->
     <section class="hero">
       <div class="hero__overlay"></div>
@@ -128,20 +146,19 @@
     <!-- hero end -->
 
     <a id="scroll-down"></a>
-    <!-- section 1 start -->
+    <!-- part 1 section 1 start -->
     <section class="steps container-custom">
       <div class="row">
         <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter">
           <img
             src="img/mix.jpg"
             alt="mix"
-            class=" img-fluid pb-4"
+            class=" img-fluid pb-4 steps_section-thumbnail"
             width="400"
             height="527"
             loading="lazy"
           />
         </div>
-
         <div
           class="col-12 col-sm-6 align-self-center justify-content-md-center"
         >
@@ -154,14 +171,142 @@
               ea optio illo eum eos placeat, cumque molestias aperiam
               voluptatum?
             </p>
-
-            <a href="#">Read More <i class="bi bi-arrow-right-short"></i></a>
+            <a href="#">Read More<i class="bi bi-arrow-right-short"></i></a>
           </div>
         </div>
       </div>
     </section>
+    <!-- part 1 section 1 end -->
+
+    <!-- part 1 section 2 start -->
+    <section class="steps steps--background">
+      <div class="container-custom">
+      <div class="row">
+        <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter order-sm-1">
+          <img
+            src="img/egg.jpg"
+            alt="mix"
+            class=" img-fluid pb-4 steps_section-thumbnail"
+            width="400"
+            height="527"
+            loading="lazy"
+          />
+        </div>
+        <div
+          class="col-12 col-sm-6 align-self-center justify-content-md-center"
+        >
+          <div class="steps__content-width">
+            <span>02</span>
+            <h1 class="h2 mb-4">Egg Toast</h1>
+            <p class="mb4">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+              inventore, et quo numquam autem impedit quae magni nam porro quasi
+              ea optio illo eum eos placeat, cumque molestias aperiam
+              voluptatum?
+            </p>
+            <a href="#">Read More<i class="bi bi-arrow-right-short"></i></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    </section>
+    <!-- part 1 section 2 end -->
+
+    <!-- part 1 section 3 start -->
+    <section class="steps container-custom">
+      <div class="row">
+        <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter">
+          <img
+            src="img/ha.jpg"
+            alt="mix"
+            class=" img-fluid pb-4 steps_section-thumbnail"
+            width="400"
+            height="527"
+            loading="lazy"
+          />
+        </div>
+        <div
+          class="col-12 col-sm-6 align-self-center justify-content-md-center"
+        >
+          <div class="steps__content-width">
+            <span>03</span>
+            <h1 class="h2 mb-4">Veggie Bowl</h1>
+            <p class="mb4">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+              inventore, et quo numquam autem impedit quae magni nam porro quasi
+              ea optio illo eum eos placeat, cumque molestias aperiam
+              voluptatum?
+            </p>
+            <a href="#">Read More<i class="bi bi-arrow-right-short"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- part 1 section 3 end -->
+
+    <!-- part 2 section 1 start -->
+
+<section>
+
+<div class="bg-dark text-white py-4">
+<div class="container-custom my-4">
+<div class="row">
+
+  <div class="col-12 col-sm-4 mb-4">
+    <img src="img/ingrediengt.jpg" class="mb-4 img-fluid"  alt="Ingredients" width="441" height="248" loading="lazy">
+    <h3>Ingredients</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+              inventore, et quo numquam autem impedit quae magni nam porro quasi
+              ea optio illo eum eos placeat, cumque molestias aperiam
+              voluptatum?
+            </p>
+  </div>
+
+  <div class="col-12 col-sm-4 mb-4">
+    <img src="img/cut.jpg" class="mb-4 img-fluid"  alt="cut" width="441" height="248" loading="lazy">
+    <h3>Cutting</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+              inventore, et quo numquam autem impedit quae magni nam porro quasi
+              ea optio illo eum eos placeat, cumque molestias aperiam
+              voluptatum?
+            </p>
+  </div>
+
+  <div class="col-12 col-sm-4 mb-4">
+    <img src="img/rice.jpg" class="mb-4 img-fluid"  alt="rice" width="441" height="248" loading="lazy">
+    <h3>Rice & Veggies</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+              inventore, et quo numquam autem impedit quae magni nam porro quasi
+              ea optio illo eum eos placeat, cumque molestias aperiam
+              voluptatum?
+            </p>
+  </div>
+</div>
+</div>
+</div>
+
+
+</section>
+<!-- part 2 section 1 end -->
+
+
+
+
 
     <!-- js -->
+    <script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
+
+
+  <script src="js/main.js"></script>
+
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
