Adding move down links + footer

--- a/index.html
+++ b/index.html
@@ -36,70 +36,60 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <!-- js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
-      integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-      crossorigin="anonymous"
-    ></script>
-  </head> 
-
-
-
-
+  </head>
 
   <body>
     <!-- navbar -->
     <div class="navbarwrap fixed-top MeanyNavTrs py-4">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bgcolor">
-      <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">Recipes 조리법</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active text-white" aria-current="page" href="#"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Menu</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-warning" type="submit">
-              Search
-            </button>
-          </form>
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bgcolor">
+        <div class="container-fluid">
+          <a class="navbar-brand text-white" href="#">Recipes 조리법</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link active text-white"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#footer">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#ott">Steps</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#footer">Contact Us</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-warning" type="submit">
+                Search
+              </button>
+            </form>
+          </div>
         </div>
-      </div>
-    </nav>
-  </div>
+      </nav>
+    </div>
     <!-- hero start -->
     <section class="hero">
       <div class="hero__overlay"></div>
@@ -153,7 +143,7 @@
           <img
             src="img/mix.jpg"
             alt="mix"
-            class=" img-fluid pb-4 steps_section-thumbnail"
+            class="img-fluid pb-4 steps_section-thumbnail"
             width="400"
             height="527"
             loading="lazy"
@@ -181,35 +171,36 @@
     <!-- part 1 section 2 start -->
     <section class="steps steps--background">
       <div class="container-custom">
-      <div class="row">
-        <div class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter order-sm-1">
-          <img
-            src="img/egg.jpg"
-            alt="mix"
-            class=" img-fluid pb-4 steps_section-thumbnail"
-            width="400"
-            height="527"
-            loading="lazy"
-          />
-        </div>
-        <div
-          class="col-12 col-sm-6 align-self-center justify-content-md-center"
-        >
-          <div class="steps__content-width">
-            <span>02</span>
-            <h1 class="h2 mb-4">Egg Toast</h1>
-            <p class="mb4">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-              inventore, et quo numquam autem impedit quae magni nam porro quasi
-              ea optio illo eum eos placeat, cumque molestias aperiam
-              voluptatum?
-            </p>
-            <a href="#">Read More<i class="bi bi-arrow-right-short"></i></a>
+        <div class="row">
+          <div
+            class="col-12 col-sm-6 d-md-flex justify-content-md-ceneter order-sm-1"
+          >
+           <img
+              src="img/egg.jpg"
+              alt="mix"
+              class="img-fluid pb-4 steps_section-thumbnail"
+              width="400"
+              height="527"
+              loading="lazy"
+            />
+          </div>
+          <div
+            class="col-12 col-sm-6 align-self-center justify-content-md-center"
+          >
+            <div class="steps__content-width">
+              <span>02</span>
+              <h1 class="h2 mb-4">Egg Toast</h1>
+              <p class="mb4">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+                inventore, et quo numquam autem impedit quae magni nam porro
+                quasi ea optio illo eum eos placeat, cumque molestias aperiam
+                voluptatum?
+              </p>
+              <a href="#">Read More<i class="bi bi-arrow-right-short"></i></a>
+            </div>
           </div>
         </div>
       </div>
-
-    </div>
     </section>
     <!-- part 1 section 2 end -->
 
@@ -220,7 +211,7 @@
           <img
             src="img/ha.jpg"
             alt="mix"
-            class=" img-fluid pb-4 steps_section-thumbnail"
+            class="img-fluid pb-4 steps_section-thumbnail"
             width="400"
             height="527"
             loading="lazy"
@@ -232,7 +223,7 @@
           <div class="steps__content-width">
             <span>03</span>
             <h1 class="h2 mb-4">Veggie Bowl</h1>
-            <p class="mb4">
+            <p class="mb4" id="ott">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
               inventore, et quo numquam autem impedit quae magni nam porro quasi
               ea optio illo eum eos placeat, cumque molestias aperiam
@@ -247,65 +238,137 @@
 
     <!-- part 2 section 1 start -->
 
-<section>
+    <section>
+      <div class="bg-dark text-white py-4">
+        <div class="container-custom my-4">
+          <div class="row">
+            <div class="col-12 col-sm-4 mb-4">
+              <a href=""><img
+                src="img/ingrediengt.jpg"
+                class="mb-4 img-fluid"
+                alt="Ingredients"
+                width="441"
+                height="248"
+                loading="lazy"
+              /></a>
+              <h3>Ingredients</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+                inventore, et quo numquam autem impedit quae magni nam porro
+                quasi ea optio illo eum eos placeat, cumque molestias aperiam
+                voluptatum?
+              </p>
+            </div>
 
-<div class="bg-dark text-white py-4">
-<div class="container-custom my-4">
-<div class="row">
+            <div class="col-12 col-sm-4 mb-4">
+              <a href=""><img
+                src="img/cut.jpg"
+                class="mb-4 img-fluid"
+                alt="cut"
+                width="441"
+                height="248"
+                loading="lazy"
+              /></a>
+              <h3>Cutting</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+                inventore, et quo numquam autem impedit quae magni nam porro
+                quasi ea optio illo eum eos placeat, cumque molestias aperiam
+                voluptatum?
+              </p>
+            </div>
 
-  <div class="col-12 col-sm-4 mb-4">
-    <img src="img/ingrediengt.jpg" class="mb-4 img-fluid"  alt="Ingredients" width="441" height="248" loading="lazy">
-    <h3>Ingredients</h3>
+            <div class="col-12 col-sm-4 mb-4">
+              <a href=""><img
+                src="img/rice.jpg"
+                class="mb-4 img-fluid"
+                alt="rice"
+                width="441"
+                height="248"
+                loading="lazy"
+              /></a>
+              <h3>Rice & Veggies</h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+                inventore, et quo numquam autem impedit quae magni nam porro
+                quasi ea optio illo eum eos placeat, cumque molestias aperiam
+                voluptatum?
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- part 2 section 1 end -->
+
+    <!-- Footer Start -->
+
+    <footer id="footer" class="bg-light text-dark pt-5 pb-4">
+      <div class="container text-center text-md-left">
+        <div class="row text-start text-md-left">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 fw-bold">
+              Recipes 조리법
+            </h5>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-              inventore, et quo numquam autem impedit quae magni nam porro quasi
-              ea optio illo eum eos placeat, cumque molestias aperiam
-              voluptatum?
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem
+              debitis cupiditate est commodi blanditiis laudantium totam quos
+              recusandae ea quae, facilis veniam aliquid distinctio ducimus
+              corrupti adipisci quod tenetur animi?
             </p>
-  </div>
-
-  <div class="col-12 col-sm-4 mb-4">
-    <img src="img/cut.jpg" class="mb-4 img-fluid"  alt="cut" width="441" height="248" loading="lazy">
-    <h3>Cutting</h3>
+          </div>
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 fw-bold">
+              More Links
+            </h5>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-              inventore, et quo numquam autem impedit quae magni nam porro quasi
-              ea optio illo eum eos placeat, cumque molestias aperiam
-              voluptatum?
+             <a href="#"class="text-dark" style="text-decoration: none;">Lorem, ipsum</a>
             </p>
-  </div>
-
-  <div class="col-12 col-sm-4 mb-4">
-    <img src="img/rice.jpg" class="mb-4 img-fluid"  alt="rice" width="441" height="248" loading="lazy">
-    <h3>Rice & Veggies</h3>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-              inventore, et quo numquam autem impedit quae magni nam porro quasi
-              ea optio illo eum eos placeat, cumque molestias aperiam
-              voluptatum?
+              <a href="#"class="text-dark" style="text-decoration: none;">Lorem, ipsum</a>
+             </p>
+             <p>
+              <a href="#"class="text-dark" style="text-decoration: none;">Lorem, ipsum</a>
+             </p>
+             <p>
+              <a href="#"class="text-dark" style="text-decoration: none;">Lorem, ipsum</a>
+             </p>
+          </div>
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h5 class="text-uppercase mb-4 fw-bold">
+              Contact Us
+            </h5>
+            <p>
+              <a href="" style="text-decoration: none;"><i class="bi bi-house-fill mx-1"></i>Dammam, 32422, SA</a>
+           </p>
+           <p>
+            <a href="" style="text-decoration: none;"><i class="bi bi-envelope-fill mx-1"></i>Recipes@gmail.com</a>
             </p>
-  </div>
-</div>
-</div>
-</div>
+            <p>
+              <a href="" style="text-decoration: none;"><i class="bi bi-telephone-fill mx-1"></i>+966 5 8302 0022</a>
+              </p>
+          </div>
+        </div>
+        <hr class="mb-4">
+
+        <div class="row align-items-center">
+          <div class="col-md-6 col-lg-12">
+            <p><small>&copy; Copyright 2022, Recipes</small></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
-</section>
-<!-- part 2 section 1 end -->
-
-
-
-
-
+    <!-- Footer End -->
     <!-- js -->
     <script
-  src="https://code.jquery.com/jquery-3.6.1.min.js"
-  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-  crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.6.1.min.js"
+      integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+      crossorigin="anonymous"
+    ></script>
 
-
-  <script src="js/main.js"></script>
-
+    <script src="js/main.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
