--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <!-- fot -->
+    <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
